Clear small bugs

--- a/src/app.css
+++ b/src/app.css
@@ -3,9 +3,9 @@
 }
 
 .highlight-clock {
-	background-color: #FFFF00;
+	background-color: #ffb6c1;
 }
 
 .highlight-move {
-	background-color: #333333;
+	background-color: #00FFFF;
 }
